--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 :root {
   --default-font: "Raleway", sans-serif;
+
+  --main-font: #391e22;
+  --brown: #56373c;
+  --bg-color: #9f807dba;
+  --font-color: #e6d1d8;
+  --highlight-color: #d0b0b1;
 }
 
 body {
@@ -13,12 +19,16 @@ form {
 }
 
 .btn {
-  border: 1px solid #000;
+  border: 1px solid var(--brown);
+  color: var(--main-font);
+  background-color: var(--font-color);
   border-radius: 5px;
   margin-left: 15px;
 }
 
 .btn:hover {
-  color: darkslategrey;
-  border: 1px solid burlywood;
+  color: var(--font-color);
+  border: 1px dashed var(--highlight-color);
+  background: var(--bg-color);
+  transition: 200ms ease-in-out;
 }
