--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@ form {
   max-width: 960px;
   margin: 0 auto;
 }
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: #56373c;
+  text-transform: uppercase;
+  text-decoration: overline;
+}
